--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css"/>
+  
+  <script src="https://cdn.what3words.com/javascript-components@4-latest/dist/what3words/what3words.js?key=21V1DUS9"></script>
 
-  <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
 
