--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>Ionic App</title>
+  <title>FlatMeta | Buy / Sell Virtual Land</title>
 
   <base href="/"/>
 
